affects #659 and #626 to allow a new option to force apply prefered speed
What has been done?
- introduced a new setting that allows video speed to force apply the
preferred speed on video players.
   - this is a fix/workaround for video players that reapply their native speed
   settings over video speed, even when the preferred speed setting is
   enabled.  This also applies to instances where the speed would be
   reset due to the native video player emiting their native speed on
   media events like seek, pause, play and buffering instances.

--- a/options.html
+++ b/options.html
@@ -148,6 +148,10 @@
         <input id="rememberSpeed" type="checkbox" />
       </div>
       <div class="row">
+        <label for="forcePreferredSpeed">Force preferred speed</label>
+        <input id="forcePreferredSpeed" type="checkbox" />
+      </div>
+      <div class="row">
         <label for="audioBoolean">Work on audio</label>
         <input id="audioBoolean" type="checkbox" />
       </div>
